# bonauer_quiz

./: Cargo.toml  README.md  build.rs  icon.res  index.html  trunk.toml
.github/workflows/: deploy.yml
public/: app.js
src/: category.rs  data.rs  gui.rs  ipv4.rs  lib.rs  main.rs  question.rs  quiz.rs  utils.rs
src/data/: data.rs  mod.rs  quiz_data.rs
src/data/questions/: abbreviations.rs  ipv4.rs  it.rs  math.rs  mod.rs
src/models/: answer.rs  category.rs  mod.rs  question.rs  quiz.rs
src/ui/: app.rs  components.rs  mod.rs
src/utils/: io.rs  ipv4.rs  mod.rs  random.rs  time_utils.rs
web/: index.html
web_old/: index.html
