[package]
name = "bonauer_quiz"
version = "0.1.0"
authors = ["DudeTux42"]
edition = "2018"

[dependencies]
eframe = { version = "0.10", features = ["glow"] }
egui = "0.14"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
name = "bonauer_quz"
path = "src/main.rs"

[features]
default = []
