[package]
name = "bonauer_quiz"
version = "0.1.0"
edition = "2021"
authors = ["DudeTux42"]
description = "A quiz application"

[lib]
name = "bonauer_quiz_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bonauer_quiz"
path = "src/main.rs"

[dependencies]
egui = "0.24.1"
eframe = { version = "0.24.1", features = ["persistence"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
winapi = { version = "0.3.9", features = ["winuser"] }
tracing-wasm = "0.2.1"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
] }
